--- a/examples/simple/www-next/public/manifest.json
+++ b/examples/simple/www-next/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Express",
-    "short_name": "Express",
+    "name": "SMARTTS Service",
+    "short_name": "SMARTTS Service",
     "start_url": "/",
     "icons": [
         {
