ArduinoJson added as json parser (cJSON removed)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,6 @@
-if(IDF_VERSION_MAJOR GREATER_EQUAL 4)
-    idf_component_register(SRC_DIRS src
-        INCLUDE_DIRS src
-        REQUIRES log nvs_flash mdns wpa_supplicant lwip esp_http_server app_update json)
-else()
-    set(COMPONENT_SRCDIRS src)
-    set(COMPONENT_ADD_INCLUDEDIRS src)
-    register_component()
-endif()
+cmake_minimum_required(VERSION 3.14)
+
+idf_component_register(SRC_DIRS src
+    INCLUDE_DIRS src third-party/ArduinoJson/src
+    REQUIRES log nvs_flash mdns wpa_supplicant lwip esp_http_server app_update json)
+
